# ai-repo-analyzer

./: .env.example  Dockerfile  README.md  example_output.json  example_run.py  pyproject.toml  report.md  requirements.txt  setup.py
llm_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: analyzer.py
src/domain/: models.py
src/services/: analysis_orchestrator.py  llm_analyzer.py
src/utils/: rate_limiter.py  token_counter.py
tests/services/: test_analysis_orchestrator.py  test_llm_analyzer.py
tests/utils/: test_rate_limiter.py  test_token_counter.py
